--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,9 @@ AllCops:
    - 'db/seeds.rb'
    - 'db/schema.rb'
    - 'vendor/bundle/**/*'
+
+Style/HashSyntax:
+  EnforcedStyle: ruby18
+
+Metrics/LineLength:
+  Max: 120
